# other_staff

./: CMakeLists.txt  fw_settings.sh  main.c  zshrc
exam-basedir/: print_hex.c  rstr_capitalizer.c
exam-basedir/traces/: 0-0_hello.trace  1-0_repeat_alpha.trace  2-0_do_op.trace  3-0_ft_range.trace  3-1_add_prime_sum.trace  4-0_ft_itoa_base.trace  4-1_sort_list.trace
